clusters/k8s-ws-terra-v2/lms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-static
  namespace: lms
spec:
  replicas: 5
  selector:
    matchLabels:
      app: lms-static
  template:
    metadata:
      labels:
        app: lms-static
    spec:
      containers:
        - name: lms-static
          image: kalharacodes/lms-static:latest
          ports:
            - containerPort: 80
